# third-party

./: .gitattributes  .gitignore  .gitmodules  README.md
GEOMAlgo/lib/: GEOMAlgo.lib
Netgen/Netgen-Release/: build_patch.patch
OpenCASCADE-DEBUG/: custom_vc14_64.bat  env.bat
OpenCASCADE-DEBUG/cmake/: OpenCASCADECompileDefinitionsAndFlags-debug.cmake  OpenCASCADEConfig.cmake  OpenCASCADEDrawTargets.cmake  OpenCASCADEVisualizationTargets-debug.cmake  OpenCASCADEVisualizationTargets.cmake
OpenCASCADE-RELEASE/cmake/: OpenCASCADEApplicationFrameworkTargets.cmake  OpenCASCADECompileDefinitionsAndFlags-release.cmake  OpenCASCADEConfig.cmake  OpenCASCADEDrawTargets-release.cmake  OpenCASCADEDrawTargets.cmake  OpenCASCADEVisualizationTargets.cmake
OpenCASCADE-RelWithDebInfo/: custom_vc14_64.bat
OpenCASCADE-RelWithDebInfo/cmake/: OpenCASCADEApplicationFrameworkTargets-relwithdebinfo.cmake  OpenCASCADECompileDefinitionsAndFlags-relwithdebinfo.cmake  OpenCASCADEConfig.cmake  OpenCASCADEDataExchangeTargets-relwithdebinfo.cmake  OpenCASCADEFoundationClassesTargets-relwithdebinfo.cmake  OpenCASCADEModelingAlgorithmsTargets-relwithdebinfo.cmake  OpenCASCADEModelingDataTargets-relwithdebinfo.cmake  OpenCASCADEVisualizationTargets-relwithdebinfo.cmake  OpenCASCADEVisualizationTargets.cmake
Salome-GEOM-DEBUG/src/BlockFix/: BlockFix.cxx  BlockFix_UnionEdges.cxx  BlockFix_UnionFaces.cxx  CMakeLists.txt
easylogging++/: easylogging++.h
netgen-DEBUG/: custom_vc14_64.bat
netgen-RELEASE/: custom.bat  custom_vc14_64.bat
netgen-RelWithDebInfo/: custom.bat  custom_vc14_64.bat  env.bat
python/: _msi.pyd  _zoneinfo.pyd  python310._pth  winsound.pyd
(+2151 files in other folders)
